# legal-trace

./: .gitignore  README.md  pyproject.toml
benchmark/: iaa_sensitivity.py
benchmark/schema/: annotation_schema.json  codebook_annotators.md  codebook_annotators.typ  codebook_internal.md  examples.jsonl
